# pico2-rtic-blinky

./: Cargo.toml  LICENSE-MIT  NOTICE  README.md  rp235x_riscv.x
.cargo/: config.toml
src/: main.rs
